# scalar_doc

./: .gitignore  README.md  docs.html  index.md  pyproject.toml  tests.py
.github/workflows/: release.yml
examples/: fastapi.py  index.html  scalar_doc.toml  spotify.py
scalar_doc/: core.py
